change same id "hints" to different name

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <div class="flex">
           <img class="photo" src= "img/soul_of_the_frog.jpg" alt="Cover of Soul of the Frog album">
           <div class="information">
-            <h3>New album out now</h3>
+            <h1 class="heading">New album out now</h1>
             <p>Soul of the Frog</p>
             <p>Digital/CD/ 2 x LP</p>
-            <a href="#" class="buy">Purchase Album</a></
+            <a href="#" class="buy" aria-describedby="buyAlbum">Purchase Album</a>
+            <p id="buyAlbum">This link redirects to the 'Soul of the Frog' album purchase page.</p>
           </div>
         </div>
       </div>
@@ -39,7 +40,7 @@
         <div class="flex">
           <img class="photo" src= "img/lead_singer.jpg" alt="Photo of Accessible Frog's lead singer">
           <div class="information">
-            <h3>About the band</h3>
+            <h1 class="heading">About the band</h1>
             <p>Photo booth aliquip pinterest meggings. Sapiente commodo wolf put a bird on it fingerstache gentrify, meh polaroid vegan everyday carry.</p>
           </div>
         </div>
