--- a/survey.html
+++ b/survey.html
@@ -59,8 +59,8 @@
                     </select>
                     <label for="favSong">What is your favorite song:</label>
                     <textarea id="favSong"></textarea>
-                    <button type="submit" value="Submit" aria-describedby="hint">Submit</button>
-                    <p id="hint">Your password must be at least 10 characters in length. It must contain a mixture of upper and lower case letters, numbers and punctuation marks.</p>
+                    <button type="submit" value="Submit" aria-describedby="submitFav">Submit</button>
+                    <p id="submitFav">Submit what you like about the band</p>
                   </fieldset>
               </form>
 
@@ -82,8 +82,8 @@
                   <input type ="email" name="textfield" id="user-email">
                   <label for="user-retype-email">Retype Email:</label> 
                   <input type ="email" name="textfield" id="user-retype-email">
-                  <button type="submit" value="Sign Up" aria-describedby="hint">Sign Up</button>
-                  <p id="hint">Your password must be at least 10 characters in length. It must contain a mixture of upper and lower case letters, numbers and punctuation marks.</p>
+                  <button type="submit" value="Sign Up" aria-describedby="submitInfo">Sign Up</button>
+                  <p id="submitInfo">Submit your information to sign up for newsletter</p>
                 </fieldset>
               </form>
             </div>
