--- a/tour.html
+++ b/tour.html
@@ -28,10 +28,9 @@
         <div class="flex">
         <!-- The following images are decorative for this project. -->
         <!-- Please see the project instructions for information on how to handle these. -->
-          <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick">
+          <img class="pick" src= "img/guitar_pick.png" alt>
           <h3>Tour Dates</h3>
-          <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick also">
-          
+          <img class="pick" src= "img/guitar_pick.png" alt>       
         </div>
          <table>
            <caption>Upcoming Shows</caption>
